@@ -5,6 +5,7 @@ import com.google.gson.GsonBuilder;
 import com.google.gson.JsonDeserializer;
 import com.google.gson.ToNumberPolicy;
 import de.pocketcloud.api.component.software.*;
+import de.pocketcloud.api.provider.write.IWriteSoftwareProvider;
 import de.pocketcloud.cloud.PocketCloud;
 import de.pocketcloud.cloud.console.log.CloudLogger;
 import de.pocketcloud.cloud.template.util.TemplateTypeHelper;
@@ -12,16 +13,19 @@ import de.pocketcloud.common.lifecycle.Loadable;
 import de.pocketcloud.common.util.FileUtils;
 import de.pocketcloud.shared.component.software.*;
 
+import java.io.BufferedWriter;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.*;
 
-public final class ServerSoftwareManager implements Loadable {
+public final class ServerSoftwareManager implements IWriteSoftwareProvider, Loadable {
 
     private static final Gson SOFTWARE_GSON = new GsonBuilder()
             .setPrettyPrinting()
+            .disableHtmlEscaping()
             .setObjectToNumberStrategy(ToNumberPolicy.LONG_OR_DOUBLE)
             .registerTypeAdapter(ISoftwareDownload.class,
                     (JsonDeserializer<ISoftwareDownload>) (json, _, ctx) -> ctx.deserialize(json, SoftwareDownload.class))
@@ -34,28 +38,28 @@ public final class ServerSoftwareManager implements Loadable {
             .create();
 
     public static final List<ServerSoftware> DEFAULTS = List.of(
-            new ServerSoftware("pmmp-latest", "SERVER", new SoftwareDownload(
-                    "https://github.com/pmmp/PocketMine-MP/releases/latest/download/PocketMine-MP.phar",
-                    "pmmp-latest.phar",
-                    "{BINARY_PATH}bin/php7/bin/php {SOFTWARE_PATH}pmmp-latest.phar --no-wizard",
-                    true
-            ), new SoftwareBinary(
-                    "https://github.com/pmmp/PHP-Binaries/releases/download/pm5-php-8.4-latest/PHP-8.4-Linux-x86_64-PM5.tar.gz",
-                    true
-            ), new SoftwareBridge(
-                    "https://github.com/PocketCloudSystem/CloudBridge/releases/latest/download/CloudBridge.phar",
-                    "plugins/CloudBridge.phar",
-                    true
-            ), new SoftwareConfig(
-                    "server.properties",
-                    "server.log",
-                    List.of(),
-                    "save-all"
-            )),
-            new ServerSoftware("waterdogpe-latest", "PROXY", new SoftwareDownload(
-                    "https://github.com/WaterdogPE/WaterdogPE/releases/download/latest/Waterdog.jar",
-                    "waterdog.jar",
-                    "java -jar {SOFTWARE_PATH}waterdog.jar",
+            new ServerSoftware("powernukkitx-latest", "SERVER", new SoftwareDownload(
+                    "https://github.com/PowerNukkitX/PowerNukkitX/releases/download/3.0.0/powernukkitx.jar",
+                    "powernukkitx.jar",
+                    new String[]{
+                            "java",
+                            "-Dfile.encoding=UTF-8",
+                            "-Djansi.passthrough=true",
+                            "-Xmx{MAX_MEMORY}M",
+                            "-XX:+UseZGC",
+                            "-XX:+ZGenerational",
+                            "-XX:+UseStringDeduplication",
+                            "-XX:ActiveProcessorCount=2",
+                            "-XX:CICompilerCount=2",
+                            "-XX:ConcGCThreads=1",
+                            "-XX:+UnlockExperimentalVMOptions",
+                            "-XX:SoftMaxHeapSize=1024M",
+                            "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+                            "--add-opens", "java.base/java.io=ALL-UNNAMED",
+                            "--add-opens", "java.base/java.net=ALL-UNNAMED",
+                            "-jar",
+                            "{SOFTWARE_PATH}powernukkitx.jar"
+                    },
                     true
             ), new SoftwareBinary(
                     null,
@@ -67,7 +71,37 @@ public final class ServerSoftwareManager implements Loadable {
             ), new SoftwareConfig(
                     "config.yml",
                     "logs/latest.log",
-                    List.of(),
+                    List.of("command_data", "players", "resource_packs", "worlds", "structures", "services", "banned-ips.json", "banned-players.json", "ops.txt", "white-list.txt"),
+                    "save-all"
+            )),
+            new ServerSoftware("waterdogpe-latest", "PROXY", new SoftwareDownload(
+                    "https://github.com/WaterdogPE/WaterdogPE/releases/download/latest/Waterdog.jar",
+                    "waterdog.jar",
+                    new String[]{
+                            "java",
+                            "-Dfile.encoding=UTF-8",
+                            "-Xmx{MAX_MEMORY}M",
+                            "-XX:+UseG1GC",
+                            "-XX:MaxGCPauseMillis=100",
+                            "-XX:ActiveProcessorCount=1",
+                            "-XX:CICompilerCount=2",
+                            "-XX:ParallelGCThreads=2",
+                            "-XX:ConcGCThreads=1",
+                            "-jar",
+                            "{SOFTWARE_PATH}waterdog.jar"
+                    },
+                    true
+            ), new SoftwareBinary(
+                    null,
+                    false
+            ), new SoftwareBridge(
+                    "https://github.com/PocketCloudSystem/CloudBridge-Proxy/releases/latest/download/CloudBridge.jar",
+                    "plugins/CloudBridge.jar",
+                    true
+            ), new SoftwareConfig(
+                    "config.yml",
+                    "logs/latest.log",
+                    List.of("packs", "lang.ini"),
                     null
             ))
     );
@@ -118,7 +152,13 @@ public final class ServerSoftwareManager implements Loadable {
         if (!service().directoryPath(software).toFile().exists() && !service().directoryPath(software).toFile().mkdirs()) throw new RuntimeException("Unable to create directory");
         if (!service().bridgeDirectoryPath(software).toFile().exists() && !service().bridgeDirectoryPath(software).toFile().mkdirs()) throw new RuntimeException("Unable to create directory");
 
-        if (!service().configFilePath(software).toFile().exists()) FileUtils.encodeJsonFile(service().configFilePath(software), software, SOFTWARE_GSON);
+        if (!service().configFilePath(software).toFile().exists()) {
+            try (BufferedWriter writer = Files.newBufferedWriter(service().configFilePath(software), StandardCharsets.UTF_8)) {
+                SOFTWARE_GSON.toJson(software, writer);
+            } catch (IOException e) {
+                throw new RuntimeException(e);
+            }
+        }
 
         if (service().requiresUpdateSoftware(software)) {
             if (!service().downloadSoftware(software)) throw new RuntimeException("Failed to download software");
@@ -139,27 +179,38 @@ public final class ServerSoftwareManager implements Loadable {
         disabledSoftware.clear();
     }
 
-    public void register(ServerSoftware software, boolean override) {
-        if (softwareList.containsKey(software.name()) && !override) throw new IllegalArgumentException("ServerSoftware already exists");
-        softwareList.put(software.name(), software);
-        if (!service().directoryPath(software).toFile().exists() && !service().directoryPath(software).toFile().mkdirs()) throw new RuntimeException("Unable to create directory");
-        if (!service().bridgeDirectoryPath(software).toFile().exists() && !service().bridgeDirectoryPath(software).toFile().mkdirs()) throw new RuntimeException("Unable to create directory");
-        FileUtils.encodeJsonFile(service().configFilePath(software), software, SOFTWARE_GSON);
-        disabledSoftware.add(software.name());
-        CloudLogger.get().warn("Please restart the cloud to download the required artifacts for the software §b{}§r.", software.name());
+    @Override
+    public void register(IServerSoftware software, boolean override) {
+        ServerSoftware serverSoftware = requireServerSoftware(software);
+        if (softwareList.containsKey(serverSoftware.name()) && !override) throw new IllegalArgumentException("ServerSoftware already exists");
+        softwareList.put(serverSoftware.name(), serverSoftware);
+        if (!service().directoryPath(serverSoftware).toFile().exists() && !service().directoryPath(serverSoftware).toFile().mkdirs()) throw new RuntimeException("Unable to create directory");
+        if (!service().bridgeDirectoryPath(serverSoftware).toFile().exists() && !service().bridgeDirectoryPath(serverSoftware).toFile().mkdirs()) throw new RuntimeException("Unable to create directory");
+
+        try (BufferedWriter writer = Files.newBufferedWriter(service().configFilePath(serverSoftware), StandardCharsets.UTF_8)) {
+            SOFTWARE_GSON.toJson(serverSoftware, writer);
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+
+        disabledSoftware.add(serverSoftware.name());
+        CloudLogger.get().warn("Please restart the cloud to download the required artifacts for the software §b{}§r.", serverSoftware.name());
     }
 
-    public void register(ServerSoftware software) {
-        register(software, false);
-    }
-
-    public void unregister(ServerSoftware software) {
+    @Override
+    public void unregister(IServerSoftware software) {
         softwareList.remove(software.name());
         disabledSoftware.remove(software.name());
     }
 
-    public ServerSoftware get(String name) {
-        return softwareList.get(name);
+    @Override
+    public boolean check(String name) {
+        return softwareList.containsKey(name);
+    }
+
+    @Override
+    public Optional<IServerSoftware> get(String name) {
+        return Optional.ofNullable(softwareList.get(name));
     }
 
     public boolean disabled(ServerSoftware software) {
@@ -169,8 +220,22 @@ public final class ServerSoftwareManager implements Loadable {
     public SoftwareService service() {
         return PocketCloud.instance().software();
     }
-    
-    public Map<String, ServerSoftware> getAll() {
-        return softwareList;
+
+    @Override
+    public Collection<IServerSoftware> getAll() {
+        return widen(softwareList.values().stream().toList());
+    }
+
+    @SuppressWarnings("unchecked")
+    private <T extends IServerSoftware> Collection<IServerSoftware> widen(Collection<T> collection) {
+        return (Collection<IServerSoftware>) collection;
+    }
+
+    private ServerSoftware requireServerSoftware(IServerSoftware serverSoftware) {
+        if (!(serverSoftware instanceof ServerSoftware software)) {
+            throw new IllegalArgumentException("Unsupported IServerSoftware implementation: " + serverSoftware.getClass().getName());
+        }
+
+        return software;
     }
 }
